src/phase3/jupyter/jupyter-in-spark.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyterlab
  namespace: spark-cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyterlab
  template:
    metadata:
      labels:
        app: jupyterlab
    spec:
      serviceAccountName: spark
      containers:
      - name: notebook
        # image: dave126/jupyter-base-notebook:1.0.5-sparkmagic
        # image: jupyter/pyspark-notebook:x86_64-python-3.11.6
        image: dave126/jupyter-base-notebook:1.1.1-sparkconnect
        imagePullPolicy: Always
        ports:
        - containerPort: 8888
      #   volumeMounts:
      #   - name: sparkmagic-config
      #     mountPath: /home/jovyan/.sparkmagic/config.json
      #     subPath: config.json
      # volumes:
      # - name: sparkmagic-config
      #   configMap:
      #     name: sparkmagic-config

---
apiVersion: v1
kind: Service
metadata:
  name: jupyterlab-svc
  namespace: spark-cluster
spec:
  selector:
    app: jupyterlab
  ports:
  - port: 8888
    targetPort: 8888
  type: NodePort
