src/phase3/jupyter/jupyterlab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterlab-ingress
  namespace: spark-cluster
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  ingressClassName: nginx
  rules:
  - host: jupyter.172-30-1-240.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jupyterlab-svc
            port:
              number: 8888
